antlr4JS/Jass/JassParser.js
// Generated from Jass/Jass.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var JassListener = require('./JassListener').JassListener;
var grammarFileName = "Jass.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'code'", "'handle'", "'integer'", "'real'", 
                     "'boolean'", "'string'", "'true'", "'false'", "'null'", 
                     "'not'", "'and'", "'or'", "'function'", "'return'", 
                     "'returns'", "'exitwhen'", "'loop'", "'endloop'", "'elseif'", 
                     "'else'", "'call'", "'if'", "'then'", "'endif'", "'debug'", 
                     "'set'", "'type'", "'extends'", "'globals'", "'endglobals'", 
                     "'constant'", "'native'", "'takes'", "'nothing'", "'endfunction'", 
                     "'local'", "'array'", "'+'", "'-'", "'*'", "'/'", "'>'", 
                     "'<'", "'=='", "'!='", "'>='", "'<='", "'['", "']'", 
                     "'('", "')'", "','", "'='" ];

var symbolicNames = [ null, "K_CODE", "K_HANDLE", "K_INTEGER", "K_REAL", 
                      "K_BOOLEAN", "K_STRING", "K_TRUE", "K_FALSE", "K_NULL", 
                      "K_NOT", "K_AND", "K_OR", "K_FUNCTION", "K_RETURN", 
                      "K_RETURNS", "K_EXITWHEN", "K_LOOP", "K_ENDLOOP", 
                      "K_ELSEIF", "K_ELSE", "K_CALL", "K_IF", "K_THEN", 
                      "K_ENDIF", "K_DEBUG", "K_SET", "K_TYPE", "K_EXTENDS", 
                      "K_GLOBALS", "K_ENDGLOBALS", "K_CONSTANT", "K_NATIVE", 
                      "K_TAKES", "K_NOTHING", "K_ENDFUNCTION", "K_LOCAL", 
                      "K_ARRAY", "ADD", "SUB", "MULT", "DIV", "GT", "LT", 
                      "EQ", "NEQ", "GTEQ", "LTEQ", "O_BRACK", "C_BRACK", 
                      "O_PAR", "C_PAR", "COMMA", "ASSIGN", "DECIMAL", "OCTAL", 
                      "HEX", "FOURCC", "REAL_CONST", "STRING_CONST", "ID", 
                      "NEWLINE", "SPACE", "COMMENT" ];

var ruleNames =  [ "file", "declr", "typedef", "globals", "global_var_list", 
                   "native_func", "func_declr", "param_list", "func", "local_var_list", 
                   "var_declr", "statement_list", "statement", "set", "call", 
                   "args", "ifthenelse", "else_clause", "loop", "exitwhen", 
                   "return_stat", "debug", "expr", "func_call", "array_ref", 
                   "func_ref", "constant", "int_const", "parens", "bool_const", 
                   "type" ];

function JassParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

JassParser.prototype = Object.create(antlr4.Parser.prototype);
JassParser.prototype.constructor = JassParser;

Object.defineProperty(JassParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

JassParser.EOF = antlr4.Token.EOF;
JassParser.K_CODE = 1;
JassParser.K_HANDLE = 2;
JassParser.K_INTEGER = 3;
JassParser.K_REAL = 4;
JassParser.K_BOOLEAN = 5;
JassParser.K_STRING = 6;
JassParser.K_TRUE = 7;
JassParser.K_FALSE = 8;
JassParser.K_NULL = 9;
JassParser.K_NOT = 10;
JassParser.K_AND = 11;
JassParser.K_OR = 12;
JassParser.K_FUNCTION = 13;
JassParser.K_RETURN = 14;
JassParser.K_RETURNS = 15;
JassParser.K_EXITWHEN = 16;
JassParser.K_LOOP = 17;
JassParser.K_ENDLOOP = 18;
JassParser.K_ELSEIF = 19;
JassParser.K_ELSE = 20;
JassParser.K_CALL = 21;
JassParser.K_IF = 22;
JassParser.K_THEN = 23;
JassParser.K_ENDIF = 24;
JassParser.K_DEBUG = 25;
JassParser.K_SET = 26;
JassParser.K_TYPE = 27;
JassParser.K_EXTENDS = 28;
JassParser.K_GLOBALS = 29;
JassParser.K_ENDGLOBALS = 30;
JassParser.K_CONSTANT = 31;
JassParser.K_NATIVE = 32;
JassParser.K_TAKES = 33;
JassParser.K_NOTHING = 34;
JassParser.K_ENDFUNCTION = 35;
JassParser.K_LOCAL = 36;
JassParser.K_ARRAY = 37;
JassParser.ADD = 38;
JassParser.SUB = 39;
JassParser.MULT = 40;
JassParser.DIV = 41;
JassParser.GT = 42;
JassParser.LT = 43;
JassParser.EQ = 44;
JassParser.NEQ = 45;
JassParser.GTEQ = 46;
JassParser.LTEQ = 47;
JassParser.O_BRACK = 48;
JassParser.C_BRACK = 49;
JassParser.O_PAR = 50;
JassParser.C_PAR = 51;
JassParser.COMMA = 52;
JassParser.ASSIGN = 53;
JassParser.DECIMAL = 54;
JassParser.OCTAL = 55;
JassParser.HEX = 56;
JassParser.FOURCC = 57;
JassParser.REAL_CONST = 58;
JassParser.STRING_CONST = 59;
JassParser.ID = 60;
JassParser.NEWLINE = 61;
JassParser.SPACE = 62;
JassParser.COMMENT = 63;

JassParser.RULE_file = 0;
JassParser.RULE_declr = 1;
JassParser.RULE_typedef = 2;
JassParser.RULE_globals = 3;
JassParser.RULE_global_var_list = 4;
JassParser.RULE_native_func = 5;
JassParser.RULE_func_declr = 6;
JassParser.RULE_param_list = 7;
JassParser.RULE_func = 8;
JassParser.RULE_local_var_list = 9;
JassParser.RULE_var_declr = 10;
JassParser.RULE_statement_list = 11;
JassParser.RULE_statement = 12;
JassParser.RULE_set = 13;
JassParser.RULE_call = 14;
JassParser.RULE_args = 15;
JassParser.RULE_ifthenelse = 16;
JassParser.RULE_else_clause = 17;
JassParser.RULE_loop = 18;
JassParser.RULE_exitwhen = 19;
JassParser.RULE_return_stat = 20;
JassParser.RULE_debug = 21;
JassParser.RULE_expr = 22;
JassParser.RULE_func_call = 23;
JassParser.RULE_array_ref = 24;
JassParser.RULE_func_ref = 25;
JassParser.RULE_constant = 26;
JassParser.RULE_int_const = 27;
JassParser.RULE_parens = 28;
JassParser.RULE_bool_const = 29;
JassParser.RULE_type = 30;


function FileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JassParser.RULE_file;
    return this;
}

FileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FileContext.prototype.constructor = FileContext;

FileContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JassParser.NEWLINE);
    } else {
        return this.getToken(JassParser.NEWLINE, i);
    }
};


FileContext.prototype.declr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DeclrContext);
    } else {
        return this.getTypedRuleContext(DeclrContext,i);
    }
};

FileContext.prototype.func = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FuncContext);
    } else {
        return this.getTypedRuleContext(FuncContext,i);
    }
};

FileContext.prototype.enterRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.enterFile(this);
	}
};

FileContext.prototype.exitRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.exitFile(this);
	}
};




JassParser.FileContext = FileContext;

JassParser.prototype.file = function() {

    var localctx = new FileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, JassParser.RULE_file);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 63;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===JassParser.NEWLINE) {
            this.state = 62;
            this.match(JassParser.NEWLINE);
        }

        this.state = 70;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 65;
                this.declr();
                this.state = 66;
                this.match(JassParser.NEWLINE); 
            }
            this.state = 72;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
        }

        this.state = 76;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===JassParser.K_FUNCTION || _la===JassParser.K_CONSTANT) {
            this.state = 73;
            this.func();
            this.state = 78;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DeclrContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JassParser.RULE_declr;
    return this;
}

DeclrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DeclrContext.prototype.constructor = DeclrContext;

DeclrContext.prototype.typedef = function() {
    return this.getTypedRuleContext(TypedefContext,0);
};

DeclrContext.prototype.globals = function() {
    return this.getTypedRuleContext(GlobalsContext,0);
};

DeclrContext.prototype.native_func = function() {
    return this.getTypedRuleContext(Native_funcContext,0);
};

DeclrContext.prototype.enterRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.enterDeclr(this);
	}
};

DeclrContext.prototype.exitRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.exitDeclr(this);
	}
};




JassParser.DeclrContext = DeclrContext;

JassParser.prototype.declr = function() {

    var localctx = new DeclrContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, JassParser.RULE_declr);
    try {
        this.state = 82;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case JassParser.K_TYPE:
            this.enterOuterAlt(localctx, 1);
            this.state = 79;
            this.typedef();
            break;
        case JassParser.K_GLOBALS:
            this.enterOuterAlt(localctx, 2);
            this.state = 80;
            this.globals();
            break;
        case JassParser.K_CONSTANT:
        case JassParser.K_NATIVE:
            this.enterOuterAlt(localctx, 3);
            this.state = 81;
            this.native_func();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function TypedefContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JassParser.RULE_typedef;
    return this;
}

TypedefContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TypedefContext.prototype.constructor = TypedefContext;

TypedefContext.prototype.K_TYPE = function() {
    return this.getToken(JassParser.K_TYPE, 0);
};

TypedefContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JassParser.ID);
    } else {
        return this.getToken(JassParser.ID, i);
    }
};


TypedefContext.prototype.K_EXTENDS = function() {
    return this.getToken(JassParser.K_EXTENDS, 0);
};

TypedefContext.prototype.K_HANDLE = function() {
    return this.getToken(JassParser.K_HANDLE, 0);
};

TypedefContext.prototype.enterRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.enterTypedef(this);
	}
};

TypedefContext.prototype.exitRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.exitTypedef(this);
	}
};




JassParser.TypedefContext = TypedefContext;

JassParser.prototype.typedef = function() {

    var localctx = new TypedefContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, JassParser.RULE_typedef);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this.match(JassParser.K_TYPE);
        this.state = 85;
        this.match(JassParser.ID);
        this.state = 86;
        this.match(JassParser.K_EXTENDS);
        this.state = 87;
        _la = this._input.LA(1);
        if(!(_la===JassParser.K_HANDLE || _la===JassParser.ID)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function GlobalsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JassParser.RULE_globals;
    return this;
}

GlobalsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GlobalsContext.prototype.constructor = GlobalsContext;

GlobalsContext.prototype.K_GLOBALS = function() {
    return this.getToken(JassParser.K_GLOBALS, 0);
};

GlobalsContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JassParser.NEWLINE);
    } else {
        return this.getToken(JassParser.NEWLINE, i);
    }
};


GlobalsContext.prototype.global_var_list = function() {
    return this.getTypedRuleContext(Global_var_listContext,0);
};

GlobalsContext.prototype.K_ENDGLOBALS = function() {
    return this.getToken(JassParser.K_ENDGLOBALS, 0);
};

GlobalsContext.prototype.enterRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.enterGlobals(this);
	}
};

GlobalsContext.prototype.exitRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.exitGlobals(this);
	}
};




JassParser.GlobalsContext = GlobalsContext;

JassParser.prototype.globals = function() {

    var localctx = new GlobalsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, JassParser.RULE_globals);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 89;
        this.match(JassParser.K_GLOBALS);
        this.state = 90;
        this.match(JassParser.NEWLINE);
        this.state = 91;
        this.global_var_list();
        this.state = 92;
        this.match(JassParser.NEWLINE);
        this.state = 93;
        this.match(JassParser.K_ENDGLOBALS);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Global_var_listContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JassParser.RULE_global_var_list;
    return this;
}

Global_var_listContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Global_var_listContext.prototype.constructor = Global_var_listContext;

Global_var_listContext.prototype.K_CONSTANT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JassParser.K_CONSTANT);
    } else {
        return this.getToken(JassParser.K_CONSTANT, i);
    }
};


Global_var_listContext.prototype.type = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TypeContext);
    } else {
        return this.getTypedRuleContext(TypeContext,i);
    }
};

Global_var_listContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JassParser.ID);
    } else {
        return this.getToken(JassParser.ID, i);
    }
};


Global_var_listContext.prototype.ASSIGN = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JassParser.ASSIGN);
    } else {
        return this.getToken(JassParser.ASSIGN, i);
    }
};


Global_var_listContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

Global_var_listContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JassParser.NEWLINE);
    } else {
        return this.getToken(JassParser.NEWLINE, i);
    }
};


Global_var_listContext.prototype.var_declr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Var_declrContext);
    } else {
        return this.getTypedRuleContext(Var_declrContext,i);
    }
};

Global_var_listContext.prototype.enterRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.enterGlobal_var_list(this);
	}
};

Global_var_listContext.prototype.exitRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.exitGlobal_var_list(this);
	}
};




JassParser.Global_var_listContext = Global_var_listContext;

JassParser.prototype.global_var_list = function() {

    var localctx = new Global_var_listContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, JassParser.RULE_global_var_list);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 107;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JassParser.K_CODE) | (1 << JassParser.K_HANDLE) | (1 << JassParser.K_INTEGER) | (1 << JassParser.K_REAL) | (1 << JassParser.K_BOOLEAN) | (1 << JassParser.K_STRING) | (1 << JassParser.K_CONSTANT))) !== 0) || _la===JassParser.ID) {
            this.state = 105;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case JassParser.K_CONSTANT:
                this.state = 95;
                this.match(JassParser.K_CONSTANT);
                this.state = 96;
                this.type();
                this.state = 97;
                this.match(JassParser.ID);
                this.state = 98;
                this.match(JassParser.ASSIGN);
                this.state = 99;
                this.expr(0);
                this.state = 100;
                this.match(JassParser.NEWLINE);
                break;
            case JassParser.K_CODE:
            case JassParser.K_HANDLE:
            case JassParser.K_INTEGER:
            case JassParser.K_REAL:
            case JassParser.K_BOOLEAN:
            case JassParser.K_STRING:
            case JassParser.ID:
                this.state = 102;
                this.var_declr();
                this.state = 103;
                this.match(JassParser.NEWLINE);
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 109;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Native_funcContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JassParser.RULE_native_func;
    return this;
}

Native_funcContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Native_funcContext.prototype.constructor = Native_funcContext;

Native_funcContext.prototype.K_NATIVE = function() {
    return this.getToken(JassParser.K_NATIVE, 0);
};

Native_funcContext.prototype.func_declr = function() {
    return this.getTypedRuleContext(Func_declrContext,0);
};

Native_funcContext.prototype.K_CONSTANT = function() {
    return this.getToken(JassParser.K_CONSTANT, 0);
};

Native_funcContext.prototype.enterRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.enterNative_func(this);
	}
};

Native_funcContext.prototype.exitRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.exitNative_func(this);
	}
};




JassParser.Native_funcContext = Native_funcContext;

JassParser.prototype.native_func = function() {

    var localctx = new Native_funcContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, JassParser.RULE_native_func);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 111;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===JassParser.K_CONSTANT) {
            this.state = 110;
            this.match(JassParser.K_CONSTANT);
        }

        this.state = 113;
        this.match(JassParser.K_NATIVE);
        this.state = 114;
        this.func_declr();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Func_declrContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JassParser.RULE_func_declr;
    return this;
}

Func_declrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Func_declrContext.prototype.constructor = Func_declrContext;

Func_declrContext.prototype.ID = function() {
    return this.getToken(JassParser.ID, 0);
};

Func_declrContext.prototype.K_TAKES = function() {
    return this.getToken(JassParser.K_TAKES, 0);
};

Func_declrContext.prototype.K_RETURNS = function() {
    return this.getToken(JassParser.K_RETURNS, 0);
};

Func_declrContext.prototype.K_NOTHING = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JassParser.K_NOTHING);
    } else {
        return this.getToken(JassParser.K_NOTHING, i);
    }
};


Func_declrContext.prototype.param_list = function() {
    return this.getTypedRuleContext(Param_listContext,0);
};

Func_declrContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

Func_declrContext.prototype.enterRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.enterFunc_declr(this);
	}
};

Func_declrContext.prototype.exitRule = function(listener) {
    if(listener instanceof JassListener ) {
        listener.exitFunc_declr(this);
	}
};




JassParser.Func_declrContext = Func_declrContext;

JassParser.prototype.func_declr = function() {
